examples/Traffic-manager/ISTIO/Subset-Level/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
spec:
  host: rollouts-demo-stable
  subsets:
  - name: canary  
    labels:        
      app: nginx
  - name: stable   
    labels:        
      app: nginx
