examples/Traffic-manager/ISTIO/Subset-Level/Virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - istio-rollout.dev.argoproj.io
  http:
  - name: primary       
    route:
    - destination:
        host: rollouts-demo-stable
        subset: stable  
      weight: 100
    - destination:
        host: rollouts-demo-stable
        subset: canary  
      weight: 0
